<resources>
    <string name="app_name">Chess</string>
    <string name="one_player">One Player</string>
    <string name="two_player">Two Player</string>
    <string name="play_back">Play Back</string>
    <string name="exit">Exit</string>
    <string name="undo">Undo</string>
    <string name="random">Random</string>
    <string name="draw">Draw</string>
    <string name="resign">Resign</string>
    <string name="save_game">Save Game</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="sort_by_date">SORT BY DATE</string>
    <string name="sort_by_title">SORT BY TITLE</string>
    <string name="next_move">Next Move</string>
</resources>
