<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    tools:context="com.cs213.abhi.chess.Home">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_player"
        android:drawableLeft="@drawable/oneplayer"
        android:id="@+id/OnePlayer"
        android:layout_marginTop="77dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_player"
        android:drawableLeft="@drawable/twoplayer"
        android:id="@+id/TwoPlayer"
        android:layout_below="@+id/OnePlayer"
        android:layout_alignStart="@+id/OnePlayer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_back"
        android:drawableLeft="@drawable/playback"
        android:id="@+id/Playback"
        android:layout_below="@+id/TwoPlayer"
        android:layout_alignEnd="@+id/TwoPlayer"
        android:layout_alignStart="@+id/TwoPlayer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:drawableLeft="@drawable/exit"
        android:id="@+id/Exit"
        android:layout_below="@+id/Playback"
        android:layout_alignStart="@+id/Playback"
        android:layout_alignEnd="@+id/Playback" />
</RelativeLayout>
