<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/board"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/board"
        android:layout_above="@+id/printLabel"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="129dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/undo"
            android:id="@+id/undoButton" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:id="@+id/randomButton" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignTop="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2"
        android:layout_marginTop="60dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/draw"
            android:id="@+id/drawButton"/>



        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/resign"
            android:id="@+id/resignButton" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/printLabel"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout2" />


</RelativeLayout>
